# DiplomSoldatovEigen

./: CMakeLists.txt  debug.h  main.cpp  variables.h
Rocket/: air_parameters.h
constants/: constants.h
fem_triangle_element/: fem_triangle_element.cpp  fem_triangle_element.h
square_triangle_grid/: square_triangle_grid.cpp  square_triangle_grid.h
structures/: structures.h
